--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,24 +5,30 @@ version: '3.9'
 services:
   # 客户端
   client:
-    # image: registry.cn-guangzhou.aliyuncs.com/visual-ddd/chat-dream-art:latest
-    image: registry.cn-guangzhou.aliyuncs.com/visual-ddd/chat:latest
+    image: visualddd/client:latest
     restart: always
     ports:
       - '3000:3000'
       - '9229:9229' # DEBUG
     environment:
-      SECRET: '5whAPFrb3wRtNzDKHQnJh8CLGx5WXJXWs1pk5AT33FqYD'
-      #PINECONE_INDEX:
-      #PINECONE_ENVIRONMENT
-      #PINECONE_API_KEY
-      AI_CONFIGURATION: '[{"type":"azure","basePath":"https://talktoai.openai.azure.com/openai/deployments/GPT35","key":"594c5a081c74456aaa3a432ea0877da0","user":"test"}]'
+      SECRET: '<%= SECRET %>'
       BACKEND: http://server:8080
+      #AI_CONFIGURATION: AI 配置
       #NODE_OPTIONS: NODEJS 配置项 # --inspect=0.0.0.0
+      REDIS: redis://redis:6379/1
+
+  # 多人协作服务器
+  collab:
+    image: visualddd/collab-server:latest
+    ports:
+      - '9090:9090'
+    environment:
+      MAIN_SERVER: http://client:3000
 
   # 后端服务
   server:
-    image: registry.cn-guangzhou.aliyuncs.com/visual-ddd/server:lastest
+    # TODO 后端服务镜像不确定
+    image: visualddd/server:latest
     restart: always
     ports:
       - '8080:8080'
@@ -38,19 +44,46 @@ services:
       nofile:
         soft: 65536
         hard: 65536
+    mem_limit: 2g
 
   # 数据库
   mysql:
-    image: mysql:8.0.22
+    image: mysql
     restart: always
     ports:
       - '3306:3306'
     volumes:
-      - /var/mysql/db:/var/lib/mysql
-      - /var/mysql/logs:/var/log
+      - ./mysql/db:/var/lib/mysql
+      - ./mysql/logs:/var/log
       - ./mysql/conf:/etc/mysql/conf.d
       # 数据库还原目录 可将需要还原的sql文件放在这里
       - ./mysql/source:/docker-entrypoint-initdb.d
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: wd_visual_ddd
+
+  # redis
+  redis:
+    image: redis:7.0-alpine
+    ports:
+      - '6379:6379'
+    command: --save 60 1 --loglevel warning
+    volumes:
+      - ./redis:/data
+
+  # https://hub.docker.com/_/nginx
+  # nginx 对外负载均衡
+  # nginx:
+  #   image: nginx:alpine
+  #   restart: always
+  #   depends_on:
+  #     - client
+  #   ports:
+  #     - '80:80'
+  #     - '443:443'
+  #   volumes:
+  #     - ./nginx.conf:/etc/nginx/nginx.conf
+  #     - ./default.conf:/etc/nginx/conf.d/default.conf
+  #     # certbot 生成的 HTTP 验证文件
+  #     - ./certbot/www:/usr/share/certbot/www:ro
+  #     # certbot 生成的证书文件
+      - ./certbot/ssl:/usr/share/certbot/ssl:ro
