--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ version: '3.9'
 services:
   # 客户端
   client:
-    image: visualddd/client:0.5.3-pre-free
+    image: visualddd/client:0.5.4-pre-free
     restart: always
     ports:
       - '3000:3000'
@@ -23,7 +23,7 @@ services:
 
   # 多人协作服务器
   collab:
-    image: visualddd/collab-server:0.5.3-pre
+    image: visualddd/collab-server:lateset
     ports:
       - '9090:9090'
     environment:
