--- a/mysql/conf/mysql.cnf
+++ b/mysql/conf/mysql.cnf
@@ -28,3 +28,8 @@ skip-name-resolve
 general_log_file        = /var/log/mysql/mysql.log
 general_log             = 1
 
+[mysql]
+default-character-set=utf8mb4
+
+[client]
+default-character-set=utf8mb4
